--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,20 @@ a {
   box-sizing: border-box;
 }
 
+.app {
+  width: 100vw;
+  height: 100vh;
+}
+
+.app-container {
+  display: flex;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
