--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  color: white;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -18,6 +19,7 @@ a {
 .app {
   width: 100vw;
   height: 100vh;
+  background-color: #0b172a;
 }
 
 .app-container {
