--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,16 +17,18 @@ a {
 }
 
 .app {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   background-color: #f7f7f7;
+  overflow: auto;
 }
 
 .app-container {
   display: flex;
   padding: 1rem;
-  width: 100%;
-  height: 100%;
   flex-direction: column;
   align-items: center;
 }
@@ -41,10 +43,34 @@ a {
   }
 }
 
+/* FIX INPUT AUTOFILL */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s, color 5000s ease-in-out 0s;
   transition-delay: background-color 5000s, color 5000s;
+}
+
+
+/* SCROLL BAR */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #fff0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: hsla(207, 48%, 51%, 0.05);
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: hsla(207, 48%, 51%, 0.3);
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
